
      \item Similarly, the \code{as.character.hexmode()} and \code{*.octmode()}
      methods also behave as \code{good citizen} methods and back compatibility
      option \code{keepStr = TRUE}.

      \item The \code{as.POSIXlt(<POSIXlt>)} and
      \code{as.POSIXct(<POSIXct>)} default methods now do obey their
      \code{tz} argument, also in this case.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{tools::Rdiff(useDiff = TRUE)} checks for the presence
      of an external \command{diff} command and switches to
      \code{useDiff = FALSE} if none is found.
      This allows \command{R CMD Rdiff} to always work.

      \item On Windows, environment variable
      \env{R_LIBCURL_SSL_REVOKE_BEST_EFFORT} can be used to switch to
      only \sQuote{best-effort} SSL certificate revocation checks with
      the default \code{"libcurl"} download method.  This reduces
      security, but may be needed for downloads to work with MITM
      proxies (\PR{18379}).

      \item (macOS) The run-time check for libraries from XQuartz for
      X11 and Tcl/Tk no longer uses \code{otool} from the Apple
      Developer Tools (PR#18400).

      \item The \LaTeX style for producing the PDF manuals, \file{Rd.sty},
      now loads the standard \samp{amsmath}, \samp{amsfonts} and
      \samp{amssymb} packages for greater coverage of math commands in
      the Rd \verb{\eqn} and \verb{\deqn} macros.
      The \verb{\mathscr} \LaTeX command is also provided (via the
      \samp{mathrsfs} package, if available, or the \samp{amsfonts}
      bundle otherwise), fulfilling the wish of \PR{18398}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item The PDF manuals (if built) can be compacted by the new
      target \command{make compact-pdf} (at the top level or in
      directory \file{doc/manual}).

      \item There is now \command{configure} support for LLVM clang 15